Further corrections on Preliminaries tutorial.

--- a/01_Preliminaries.ipynb
+++ b/01_Preliminaries.ipynb
@@ -13,7 +13,7 @@
     "3. [What is Git and Github](#short_git)\n",
     "4. [Help and Other Resources](#short_help)\n",
     "---\n",
-    "Extended version\n",
+    "## Extended version\n",
     "1. [Introduction to Python](#python)\n",
     "2. [Integrated Development Environments](#ide)\n",
     "3. [Introduction to Jupyter](#jupyter)\n",
@@ -165,17 +165,7 @@
    "source": [
     "<a id=\"short_help\"></a>\n",
     "# Other Recources\n",
-    "When you begin coding you will inevitably run into challenges. Thankfully there are many online communities and  platforms where coders come together to help eachother. Some of these platfomrs include [**Stackoverflow**](https://stackoverflow.com) or subreddits like [r/programming](https://www.reddit.com/r/programming/) and [r/pyhton](https://www.reddit.com/r/Python/) on Reddit. Additionally, there are several free online recources to help you to enhance your coding skills, such as [MIT OpenCourseware](https://ocw.mit.edu/index.htm), [SoloLearn](https://www.sololearn.com), and [Codecademy](https://www.codecademy.com/learn).\n",
-    "\n",
-    "<img src=\"https://i0.wp.com/wptavern.com/wp-content/uploads/2016/07/stack-overflow.png?w=1254&ssl=1\" width=\"400\">\n",
-    "<img src=\"https://cdn-images-1.medium.com/max/280/1*QNimSWsBQxta_xt3XksQaw@2x.png\" width=\"80\"> \n",
-    "<img src=\"https://www.codecademy.com/webpack/44e01805165bfde4e6e4322c540abf81.svg\" width=\"300\">\n",
-    "<img src=\"https://vignette.wikia.nocookie.net/sdorica/images/5/55/Reddit-icon.png/revision/latest/scale-to-width-down/480?cb=20180627162002\" width=\"80\">\n",
-    "  \n",
-    "## Stackoverflow \n",
-    "Originally created in 2008, Stackoverflow is a forum for a broad range of programming topics. Typically, it is highly likely that someone has already asked a similar question  to yours, and since then has been answered. If not, you may post your queries here and have it answered in no time. According to a paper published by  [UC Berkley](https://people.eecs.berkeley.edu/~bjoern/projects/stackoverflow/#), 92% of questions posted on Stackoverflow were answered with a median time of around 11 minutes! Based on how useful an answer, you can either rate a user's response \"up\" or \"down\", ensuring that the best answers are displayed first. \n",
-    "  \n",
-    "For more information on [how to use](https://stackoverflow.com/tour) Stackoverflow follow this link!"
+    "When you begin coding you will inevitably run into challenges. Thankfully there are many online communities and  platforms where coders come together to help eachother. Some of these platforms include [Stackoverflow](https://stackoverflow.com) or subreddits like [r/programming](https://www.reddit.com/r/programming/) and [r/pyhton](https://www.reddit.com/r/Python/) on Reddit. Additionally, there are several free online recources to help you to enhance your coding skills, such as [MIT OpenCourseware](https://ocw.mit.edu/index.htm), [SoloLearn](https://www.sololearn.com), and [Codecademy](https://www.codecademy.com/learn)."
    ]
   },
   {
@@ -205,8 +195,6 @@
     "Furthermore, Python supports the use of modules and packages, encouraging [program modularity](https://www.techopedia.com/definition/25972/modular-programming), and code reuse across a diversity of projects. Once a module or package has been developed, it may be scaled for use in other projects. The Python interpreter and the extensive standard library are available in source or binary form, free of charge for all major platforms and may be distributed with ease.\n",
     "\n",
     "Since its inception, the concept of Python being a \"scripting language\" has changed considerably. Python is now used to write large, commercial style applications instead of trivial ones. This reliance on Python has expanded even more so with the Internet gaining popularity. Today, a large majority of web applications and platforms rely on Python, including Google's search engine, Instagram, and the web-oriented transaction system of the New York Stock Exchange (NYSE). Even NASA utilises Python when to program their equipment and space machinery.\n",
-    "\n",
-    "![Python Logo](https://www.python.org/static/community_logos/python-logo-master-v3-TM.png)\n",
     "\n",
     "## Key Advantages\n",
     "### Great for beginners\n",
@@ -260,7 +248,6 @@
     "- Click *Install Now*. A few minutes later you should have a working Python 3 installation on your system.\n",
     "\n",
     "#### MacOS\n",
-    "\n",
     "The best way to install  Python 3 on macOS is via the Homebrew package manager.\n",
     "\n",
     "**Step 1: Install Homebrew (Part 1)**\n",
@@ -314,27 +301,27 @@
     "## [Spyder](https://github.com/spyder-ide/spyder)\n",
     "Spyder is an open-source IDE included in the Anaconda Python Distribution. Spyder primarily targets data scientists and is specifically desgined for Python use.\n",
     "\n",
-    "![Spider IDE](https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Python+IDEs/content_spyder.png)\n",
+    "![Spider IDE](imgs/01_spyder.png)\n",
     "\n",
     "## [Visual Studio Code](https://code.visualstudio.com/)\n",
     "Visual Studio Code is a text editor built on Electron. It is a light weight IDE which can be configured to work on almost any task, compatible with almost every language. It is also highly integrated with Git and Githib.\n",
     "\n",
-    "![VS Code IDE](https://s3.amazonaws.com/assets.datacamp.com/blog_assets/vscode-intellisense.gif)\n",
+    "![VS Code IDE](imgs/01_visual_studio.gif)\n",
     "\n",
     "## [Atom](https://atom.io/)\n",
     "Similar to Visual Studio Code, Atom is an sleek editor built on Electron which was originally purposed for application design. The IDE was created by Github and has a large community around it. It supports Javascript, HTML, and CSS. However,  Python must be run on an extension. One major advantage of Atom is its ability to incorporate packages from Github such as Hydrogen. Hydrogen enables it users to run select snippets of code within the editor itself, as is seen in the GIF below.\n",
     "\n",
-    "![Atom IDE](https://i.github-camo.com/9648f8f84f3eda65fd542c13d0a355e4b0cffd2c/68747470733a2f2f7261772e67697468756275736572636f6e74656e742e636f6d2f666c6f77747970652f6964652d666c6f77747970652f6d61737465722f7265736f75726365732f6175746f636f6d706c6574652e676966)\n",
+    "![Atom IDE](imgs/01_atom.gif)\n",
     "\n",
     "## [Repl.it](https://repl.it/)\n",
     "Unlike the aformentioned IDEs, Repl.it is an online IDE where Python and Javascript are the primary languages used. It is not as capable as most IDEs, but it still allows for basic coding on multiple devices as it enables users to log into their account anywhere.\n",
     "\n",
-    "![Repl.it](https://cdn-images-1.medium.com/max/1600/1*eY4scOqUtXTCINdlDk5vZQ.png)\n",
+    "![Repl.it](imgs/01_replit.png)\n",
     "\n",
     "## Jupyter Notebook\n",
     "Jupyter is also included in the Anaconda Distribution and is a versatile tool for programming. Unlike the others, Jupyter is not a conventional IDE as users are able to document their work on it. However, Jupyter is not recomended for the sole use of writing complicated or extensive code. More information about Jupyter Notebook will be elaborated on in the subsequent chapters.\n",
     "\n",
-    "![Jupyter Notebook IDE](http://community.datacamp.com.s3.amazonaws.com/community/production/ckeditor_assets/pictures/624/content_jupyter-notebook.png)"
+    "![Jupyter Notebook IDE](imgs/01_jupyter.png)"
    ]
   },
   {
@@ -350,7 +337,7 @@
     "## Jupyter\n",
     "Jupyter is a platform which enables its users to display their programs in plain text while simultaneously sharing their original codes as well. In recent years, Jupyter Notebook has become increasingly popular in the scientific community due to its efficacy in combining scientific results with interactivle code in a plethora of programming langauges. Jupyter can also be used indepedently as an IDE to develop, create, and run your code, making it an increadibly useful and versatile tool.\n",
     "\n",
-    "![Jupyter Intro Pic](https://datacarpentry.org/python-ecology-lesson/fig/00_0_jupyter_notebook_example.jpg)\n",
+    "![Jupyter Intro](imgs/01_jupyter.jpg)\n",
     "\n",
     "### Installing Jupyter\n",
     "Jupyter comes preinstalled with the Anaconda Distribution used for Python. However,  if one has already downloaded Python independently of Anaconda, there are alternative ways to install Jupyter. You first have to check that you have the latest verion of pip installed. You may do so by executing the command  `pip install --upgrade pip`. If you find that the latest version of pip is not intalled on your device, please follow the insructions on [this link](https://www.makeuseof.com/tag/install-pip-for-python/). Next use the command `pip install jupyter` to install Jupyter Notebook on to your device.\n",
@@ -358,11 +345,11 @@
     "### Launching Jupyter\n",
     "For Windows users, launching the Jupyter Notebook can be done easily through the Anaconda application which may be accessed via the start menu. As for OsX and Linux users, the terminal window or command line have to be opened first. Navigate through to the files you want to launch in the Jupyter Notebook (using the aforementioned commands in the introduction), then enter the command: `jupyter notebook`. This will open the selected folders in Jupyter Notebook's online application in your browser. From this point you can either open your existing `.ipynb` files or create a new notebook which will look similar to the figure below.\n",
     "\n",
-    "![Jupyter Menu](https://jupyter.readthedocs.io/en/latest/_images/tryjupyter_file.png)\n",
+    "![Jupyter Menu](imgs/01_launch_jupyter.png)\n",
     "\n",
     "Once you have created a new notebook (or open a previously existing one), you can begin by finding the `Help` tab in the menu bar and selecting the `user interface tour`, which takes you through an overview of the features of Jupyter's user interface (UI). Some important featues include the cell function. Cells are containers for text or code to be displayed or executed by the notebook's [kernel](https://www.techopedia.com/definition/3277/kernel).\n",
     "\n",
-    "![Cell creation example](http://community.datacamp.com.s3.amazonaws.com/community/production/ckeditor_assets/pictures/202/content_jupyternotebook7.gif)\n",
+    "![Cell creation example](imgs/01_jupyter_cell.gif)\n",
     "\n",
     "**Markdown cells** are used for writing text, creating tables and inserting images. These cells are written in the Markdown code. A brief introduction of what Markdown is would be expounded in the subsequent section. \n",
     "\n",
@@ -413,25 +400,24 @@
     "## Github\n",
     "GitHub is a collaborative code hosting site built on top of the git *distributed version control system (DVCS)* (refer to Chapter 4.2 for more a more detailed explanation on DVCS). GitHub reposes on a “fork & pull” model in which developers create their own copy of a repository that they then submit via a pull request. With the pull request, developers want the project master to pull their changes into the main branch.\n",
     "\n",
-    "![https://image.slidesharecdn.com/whatisgit-devopstutorial-edureka-170525072621/95/what-is-git-what-is-github-git-tutorial-github-tutorial-devops-tutorial-edureka-14-638.jpg?cb=1495698093](https://image.slidesharecdn.com/whatisgit-devopstutorial-edureka-170525072621/95/what-is-git-what-is-github-git-tutorial-github-tutorial-devops-tutorial-edureka-14-638.jpg?cb=1495698093)\n",
+    "![Git GitHub Diagram](imgs/01_git_github_diagram.jpg)\n",
     "\n",
     "In addition to code hosting, collaborative code reviewing, and integrated issue tracking, GitHub has integrated social features as well. Users are able to subscribe to information by “watching” projects and “following” users. Some users can award stars to codes belonging to other users, which essentially has the same effect as \"liking\" a post on Facebook. Users also have profiles, that can be populated with their personal information, and contain their recent activity on the site. With over  57 million repositories hosted, GitHub is currently the largest code hosting site in the world.\n",
     "\n",
-    "![ChessUrl](https://media.giphy.com/media/iMC4JfcjSSXsPTcGJm/giphy.gif)\n",
+    "![GitHub Scroll](imgs/01_github_scroll.gif)\n",
     "\n",
     "## Version Control Systems\n",
     "People might need to collaborate with developers on other systems. Version control systems are one way to do it. Version Control Systems record changes to a file over time so that that it is possible to recall specific versions later. In other words, version control systems allow one to revert selected files or even the entire project back to a previous state. Version Control Systems also allow one to compare changes over time, see who last modified something, who introduced an issue and when. We typically make a distinction between centralised and distributed version control systems.\n",
     "\n",
-    "\n",
     "### Centralised Version Control System (CVCS)\n",
     "In centralized version control systems, each user typically gets his or her own working copy, but there is only one central repository, often located on remote server. As soon as one commits, it is possible for the other developers to update and to see the changes. To check who made the changes and what the change were, users need to update the centralized server after executing a commit. The centralized server contains all the versioned files and number of developers that checked out files from that central place. \n",
     "\n",
-    "![](https://homes.cs.washington.edu/~mernst/advice/version-control-fig2.png)\n",
+    "![CVCS](imgs/01_CVCS.png)\n",
     "\n",
     "However, there are downsides to this. Firstly, the most obvious problem is the single point of failure that the centralized server represents. If the server goes down, during that duration nobody can collaborate or save changes. Secondly, another major issue is the hard disk. If one has the entire history saved in one local folder, he risks to lose everthing if the system fails or crashes. \n",
     "\n",
     "### Distributed Version Control Systems (DVCS)\n",
-    "![](https://homes.cs.washington.edu/~mernst/advice/version-control-fig3.png)\n",
+    "![DVCS](imgs/01_DVCS.png)\n",
     "\n",
     "In distributed version control systems, users get their own repository and working copy. Unlike a centralized version control system where working on a single server presents a major risk for the project development, distributed version systems stores in each users' local repository the full history of the file. Thus, if any server fails, edited repositories may be copied and restored back on the server.\n",
     "\n",
@@ -453,17 +439,6 @@
     "## Installing Git\n",
     "Installing Git is not complicated. Access the [homepage](https://git-scm.com/) and look for the rubrique \"Download\". You then have to select the OS you are working in.\n",
     "\n",
-    "### Installing on Windows\n",
-    "![](https://media.giphy.com/media/kWMu5xttVyIEHim5Z3/giphy.gif)\n",
-    "\n",
-    "### Installing on Mac\n",
-    "![](https://media.giphy.com/media/nKVPZSYuwTFUCEuCGj/giphy.gif)\n",
-    "\n",
-    "### Installing on Linux\n",
-    "![](https://media.giphy.com/media/TGuW46Z9JgBYTdSqY1/giphy.gif)\n",
-    "\n",
-    " \n",
-    "  \n",
     "## Git Basics\n",
     "We previously introduced Git as a distributed version control system. This means that it allows users to efficiently collaborate on a certain project. It is also able to perform actions extremely fast as Git only needs to access the hard drive. With all this information, you may still wonder what the expectations of Git developers were when developing this platform. We list 5 important expectations:\n",
     "- Speed.\n",
