Update 06_Object_Oriented_Programming .ipynb
Minor grammar changes

--- a/06_Object_Oriented_Programming .ipynb
+++ b/06_Object_Oriented_Programming .ipynb
@@ -21,14 +21,14 @@
     "    \n",
     "A programming paradigm is a way of classifying a programming language based on its features, particularly the way in which its code is organized. \n",
     "        \n",
-    "The major existing programming paradigms are: \n",
+    "A few of the major existing programming paradigms are: \n",
     "1. [Imperative](#imperative)\n",
     "2. [Logical](#logical)\n",
     "3. [Functional](#functional)\n",
     "4. [Object-Oriented](#oop)\n",
     "\n",
     "<a id=\"imperative\"></a>\n",
-    "**Imperative programming** is a programming paradigm which consists of providing of commands in a sequential order for a computer to execute. In other words, it is a simple list or series of instructions. The following is an illustration of imperative code in python, as will all the code of this notebook be.\n",
+    "**Imperative programming** is a programming paradigm which consists of the provision of commands in a sequential order for a computer to execute. In other words, it is a series of instructions. The following is an illustration of imperative code in ython.\n",
     "\n",
     "\n",
     "```python\n",
