--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -88,9 +88,11 @@
     "    #class attribute \n",
     "    species = \"Gorilla\"\n",
     "    #instance attribute\n",
-    "    def __init__(self, name, age):\n",
+    "    def __init__(self, name, age, weight, height):\n",
     "        self.name = name \n",
     "        self.age = age\n",
+    "        self.weight = weight \n",
+    "        self.height = height \n",
     "        \n",
     "```\n",
     "\n",
@@ -101,12 +103,12 @@
     "Objects are specific-instances of classes. To instantiate our class, we use Gorilla(name,age): \n",
     "\n",
     "```python\n",
-    "kingkong = Gorilla(\"King Kong\", 15)\n",
+    "kingkong = Gorilla(\"King Kong\", 15, 170, 1.78)\n",
     "\n",
     "#class attributes\n",
     "print(\"King Kong is a {}\".format(kingkong.__class__.species))\n",
     "#instance attributes\n",
-    "print(\"{} is {} years old\". format(kingkong.name, kingkong.age))\n",
+    "print(\"{} is {} years old, weighs {} kg, and is {} meters tall\". format(kingkong.name, kingkong.age, kingkong.weight, kingkong.height))\n",
     "```\n",
     "We have thus defined an object kingkong, which is a gorilla of name \"King Kong\", and 15 years of age. "
    ]
