--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -103,14 +103,20 @@
     "Objects are specific-instances of classes. To instantiate our class, we use Gorilla(name,age): \n",
     "\n",
     "```python\n",
-    "kingkong = Gorilla(\"King Kong\", 15, 170, 1.78)\n",
+    "kingkong = Gorilla(\"King Kong\", 15, 170, 1.4)\n",
+    "donkeykong = Gorilla(\"Donkey Kong\", 11, 210, 1.6)\n",
     "\n",
     "#class attributes\n",
     "print(\"King Kong is a {}\".format(kingkong.__class__.species))\n",
+    "print(\"Donkey Kong is a {}\".format(donkeykong.__class__.species))\n",
     "#instance attributes\n",
     "print(\"{} is {} years old, weighs {} kg, and is {} meters tall\". format(kingkong.name, kingkong.age, kingkong.weight, kingkong.height))\n",
+    "print(\"{} is {} years old, weighs {} kg, and is {} meters tall\". format(donkeykong.name, donkeykong.age, donkeykong.weight, donkeykong.height))\n",
     "```\n",
-    "We have thus defined an object kingkong, which is a gorilla of name \"King Kong\", and 15 years of age. "
+    "We have thus defined an object kingkong, which is a gorilla of name \"King Kong\", and 15 years of age, 170 kilograms and 1.4 meters tall. \n",
+    "We have also defined donkeykong, a gorilla of name \"Donkey Kong\", 11 years of age, 210 kg and 1.6 meters tall. \n",
+    "\n",
+    "While their class attributes are the same meaning that both objects are of the species Gorilla, it is important to highlight that their instance attributes differ, their specificities. "
    ]
   },
   {
