--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -107,14 +107,21 @@
     "donkeykong = Gorilla(\"Donkey Kong\", 11, 210, 1.6)\n",
     "\n",
     "#class attributes\n",
-    "print(\"King Kong is a {}\".format(kingkong.__class__.species))\n",
-    "print(\"Donkey Kong is a {}\".format(donkeykong.__class__.species))\n",
+    "print(\"King Kong is a {}.\".format(kingkong.__class__.species))\n",
+    "print(\"Donkey Kong is a {}.\".format(donkeykong.__class__.species))\n",
     "#instance attributes\n",
-    "print(\"{} is {} years old, weighs {} kg, and is {} meters tall\". format(kingkong.name, kingkong.age, kingkong.weight, kingkong.height))\n",
-    "print(\"{} is {} years old, weighs {} kg, and is {} meters tall\". format(donkeykong.name, donkeykong.age, donkeykong.weight, donkeykong.height))\n",
+    "print(\"{} is {} years old, weighs {} kg, and is {} meters tall.\". format(kingkong.name, kingkong.age, kingkong.weight, kingkong.height))\n",
+    "print(\"{} is {} years old, weighs {} kg, and is {} meters tall.\". format(donkeykong.name, donkeykong.age, donkeykong.weight, donkeykong.height))\n",
     "```\n",
+    "This returns: \n",
+    "\n",
+    "King Kong is a Gorilla.  \n",
+    "Donkey Kong is a Gorilla.  \n",
+    "King Kong is 15 years old, weighs 170 kg, and is 1.4 meters tall.  \n",
+    "Donkey Kong is 11 years old, weighs 210 kg, and is 1.6 meters tall.  \n",
+    "\n",
     "We have thus defined an object kingkong, which is a gorilla of name \"King Kong\", and 15 years of age, 170 kilograms and 1.4 meters tall. \n",
-    "We have also defined donkeykong, a gorilla of name \"Donkey Kong\", 11 years of age, 210 kg and 1.6 meters tall. \n",
+    "We have also defined donkeykong, a gorilla of name \"Donkey Kong\", 11 years of age, 210 kilograms and 1.6 meters tall. \n",
     "\n",
     "While their class attributes are the same meaning that both objects are of the species Gorilla, it is important to highlight that their instance attributes differ, their specificities. "
    ]
