--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -9,7 +9,7 @@
     "2. [Object-Oriented Programming](#oop)\n",
     "  * [Class](#class)\n",
     "  \n",
-    "julia test"
+    "kamran test"
    ]
   },
   {
