--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -7,9 +7,7 @@
     "# Table of Contents\n",
     "1. [Programming Paradigms](#program_paradigms)\n",
     "2. [Object-Oriented Programming](#oop)\n",
-    "  * [Class](#class)\n",
-    "  \n",
-    "kamran test"
+    "  * [Class](#class)"
    ]
   },
   {
