--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -122,7 +122,41 @@
     "We have thus defined an object kingkong, which is a gorilla of name \"King Kong\", and 15 years of age, 170 kilograms and 1.4 meters tall. \n",
     "We have also defined donkeykong, a gorilla of name \"Donkey Kong\", 11 years of age, 210 kilograms and 1.6 meters tall. \n",
     "\n",
-    "While their class attributes are the same meaning that both objects are of the species Gorilla, it is important to highlight that their instance attributes differ, their specificities. "
+    "While their class attributes are the same meaning that both objects are of the species Gorilla, it is important to highlight that their instance attributes differ, their specificities. \n",
+    "\n",
+    "## Methods\n",
+    "\n",
+    "Methods are functions used inside classes that form the interface and behaviour of an object.\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "class Gorilla: \n",
+    "    #class attribute \n",
+    "    species = \"Gorilla\"\n",
+    "    #instance attribute\n",
+    "    def __init__(self, name, age, weight, height):\n",
+    "        self.name = name \n",
+    "        self.age = age\n",
+    "        self.weight = weight \n",
+    "        self.height = height \n",
+    "    #class method\n",
+    "    def eat(self):\n",
+    "        return '{} is eating a banana.'.format(self.name)\n",
+    "    \n",
+    "#class method\n",
+    "print(kingkong.eat)\n",
+    "print(donkeykong.eat)\n",
+    "      \n",
+    "```\n",
+    "\n",
+    "This returns:\n",
+    "\n",
+    "King Kong is eating a banana.\n",
+    "Donkey Kong is eating a banana.\n",
+    "\n",
+    "Note that the only argument is 'self' here but you can add arbitrary many. The output is the same for King Kong and Donkey Kong. To get instance-specific output we can use their attributes. \n",
+    "\n",
+    "#### Next: function that for example uses age or weight (for example if statement)"
    ]
   },
   {
