--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -144,8 +144,8 @@
     "        return '{} is eating a banana.'.format(self.name)\n",
     "    \n",
     "#class method\n",
-    "print(kingkong.eat)\n",
-    "print(donkeykong.eat)\n",
+    "print(kingkong.eat())\n",
+    "print(donkeykong.eat())\n",
     "      \n",
     "```\n",
     "\n",
@@ -156,8 +156,46 @@
     "\n",
     "Note that the only argument is 'self' here but you can add arbitrary many. The output is the same for King Kong and Donkey Kong. To get instance-specific output we can use their attributes. \n",
     "\n",
-    "#### Next: function that for example uses age or weight (for example if statement)"
+    "\n",
+    "```python\n",
+    "\n",
+    "class Gorilla: \n",
+    "        #class attribute \n",
+    "    species = \"Gorilla\"\n",
+    "    #instance attribute\n",
+    "    def __init__(self, name, age, weight, height):\n",
+    "        self.name = name \n",
+    "        self.age = age\n",
+    "        self.weight = weight \n",
+    "        self.height = height \n",
+    "    #class method\n",
+    "    def eat(self):\n",
+    "        return '{} is eating a banana.'.format(self.name)\n",
+    "    #instance method\n",
+    "    def bananacount(self):\n",
+    "        if self.weight > 200:\n",
+    "            x = 400\n",
+    "        else:\n",
+    "            x = 250\n",
+    "        return '{} eats {} Bananas'.format(self.name, x)\n",
+    "    \n",
+    "```\n",
+    "\n",
+    "This returns:\n",
+    "\n",
+    "King Kong eats 250 Bananas\n",
+    "Donkey Kong eats 400 Bananas\n",
+    "\n",
+    "- We can also use __special methods__ that will rewrite existing standard functions such as print()\n",
+    "- interract with eachother (for example hierarchy)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
