--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -151,10 +151,10 @@
     "\n",
     "This returns:\n",
     "\n",
-    "King Kong is eating a banana.\n",
+    "King Kong is eating a banana.  \n",
     "Donkey Kong is eating a banana.\n",
     "\n",
-    "Note that the only argument is 'self' here but you can add arbitrary many. The output is the same for King Kong and Donkey Kong. To get instance-specific output we can use their attributes. \n",
+    "Note that the only argument is 'self' here. The \"self\" argument refers to the object itself, the (but you can add arbitrary many?, would this really be a method if we did? would it not just be an instantiation of our object?). The output is the same for King Kong and Donkey Kong. To get instance-specific output we can use their attributes. \n",
     "\n",
     "\n",
     "```python\n",
@@ -174,17 +174,17 @@
     "    #instance method\n",
     "    def bananacount(self):\n",
     "        if self.weight > 200:\n",
-    "            x = 400\n",
+    "            banana = 400\n",
     "        else:\n",
-    "            x = 250\n",
-    "        return '{} eats {} Bananas'.format(self.name, x)\n",
+    "            banana = 250\n",
+    "        return '{} eats {} bananas'.format(self.name, banana)\n",
     "    \n",
     "```\n",
     "\n",
     "This returns:\n",
     "\n",
-    "King Kong eats 250 Bananas\n",
-    "Donkey Kong eats 400 Bananas\n",
+    "King Kong eats 250 bananas\n",
+    "Donkey Kong eats 400 bananas\n",
     "\n",
     "- We can also use __special methods__ that will rewrite existing standard functions such as print()\n",
     "- interract with eachother (for example hierarchy)\n"
