--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -154,7 +154,7 @@
     "King Kong is eating a banana.  \n",
     "Donkey Kong is eating a banana.\n",
     "\n",
-    "Note that the only argument is 'self' here. The \"self\" argument refers to the object itself, the (but you can add arbitrary many?, would this really be a method if we did? would it not just be an instantiation of our object?). The output is the same for King Kong and Donkey Kong. To get instance-specific output we can use their attributes. \n",
+    "Note that the only argument is 'self' here. The \"self\" argument refers to the object or the bound variable itself. (but you can add arbitrary many?, would this really be a method if we did? would it not just be an instantiation of our object?). The output is the same for King Kong and Donkey Kong. To get instance-specific output we can use their attributes. \n",
     "\n",
     "\n",
     "```python\n",
