--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "1.1 What is a programming paradigm? \n",
     "    \n",
-    "A programming paradigm is a way of classifying a programming language based on its features, particularly the way in which its code is organized. \n",
+    "A programming paradigm is a way of classifying a programming language based on its features, particularly the way in which its code is organised. \n",
     "        \n",
     "A few of the major existing programming paradigms are: \n",
     "1. [Imperative](#imperative)\n",
@@ -27,7 +27,7 @@
     "4. [Object-Oriented](#oop)\n",
     "\n",
     "<a id=\"imperative\"></a>\n",
-    "**Imperative programming** is a programming paradigm which consists of the provision of commands in a sequential order for a computer to execute. In other words, it is a series of instructions. The following is an illustration of imperative code in ython.\n",
+    "**Imperative programming** is a programming paradigm which consists of the provision of commands in a sequential order for a computer to execute. In other words, it is a series of instructions. The following is an illustration of imperative code in Python.\n",
     "\n",
     "\n",
     "```python\n",
@@ -37,7 +37,7 @@
     "   \n",
     "```\n",
     "<a id=\"functional\"></a>\n",
-    "**Functional programming** is a paradigm which treats computation as the [evaluation of mathematical functions](https://en.wikipedia.org/wiki/Functional_programming) (a series of transformations) instead of progressively changing and mutating data. It allows us to define our own complex functions, suited to our endaveours, instead of limiting us to the functions integrated in python. The following shows an example of a function of two inputs x and y, defined to multiply the first input x by y. \n",
+    "**Functional programming** is a paradigm which treats computation as the [evaluation of mathematical functions](https://en.wikipedia.org/wiki/Functional_programming) (a series of transformations) instead of progressively changing and mutating data. It allows us to define our own complex functions, suited to our endeavours, instead of limiting us to the functions integrated in the programming language. The following shows an example in Python of a function of two inputs x and y, defined to multiply the first input x by y. \n",
     "\n",
     "```python\n",
     "def multiply(x,y):\n",
@@ -50,7 +50,7 @@
     "\n",
     "2.1 Why do we need Object-Oriented programming (OOP)?\n",
     "\n",
-    "The main difference between various paradigms is the way they handle the state (the values) of the variables. In procedural languages all variables are global variables. For example, the following line of code attributes a value to the variable x, one of the particularities is that this assignment affects the global state of the program.\n",
+    "The main difference between the various paradigms is the way they handle the state (the values) of the variables. In procedural languages, all variables are global variables. For example, the following line of code attributes a value to the variable x, one of the particularities is that this assignment affects the global state of the program.\n",
     "\n",
     "```python\n",
     "x = 12\n",
@@ -67,12 +67,12 @@
     "\n",
     "To recap: \n",
     "* Imperative programming transform state progressively\n",
-    "* Functional programs isolate state\n",
+    "* Functional programming strictly isolates state from function\n",
     "* OOP couples state with functions, designating which states are to be modified by these functions\n",
     "\n",
     "2.2 So what is Object-Oriented programming?    \n",
     "\n",
-    "Object-oriented programming (OOP) is based on the idea that we are no longer primarily focussed on the logic or actions of our program but rather the data itself, in particular the objects of our program. While OOP serves a similar purpose as functional programming - eliminating the global state, it goes further by allowing us to store variables in objects rather than functions. Our programming is therefore centered around the objects themselves. \n",
+    "Object-oriented programming (OOP) is based on the idea that we are no longer primarily focused on the logic or actions of our program but rather the data itself, in particular the objects of our program. While OOP serves a similar purpose as functional programming - eliminating the global state, it goes further by allowing us to store variables in objects rather than functions. Our programming is therefore centered around the objects themselves. \n",
     "\n",
     "To illustrate what an object may be, imagine a troop of gorillas. The gorilla as an animalistic species has certain characteristics- a name, height, 2 arms and 2 legs. However exploring every individual gorilla, we find that some of those characteristics vary- for example one animal will be called George and weigh 150 kg, whereas another may be called Harry and weigh 190 kg. The specie is the general case of our beast, the class. The individual beast is an instance of our class. This generalization as a class of objects is similar to Plato's concept of the ideal chair that stands for all chairs, or in our case the \"ideal\" gorilla. \n",
     "\n",
@@ -187,7 +187,23 @@
     "Donkey Kong eats 400 bananas\n",
     "\n",
     "- We can also use __special methods__ that will rewrite existing standard functions such as print()\n",
-    "- interract with eachother (for example hierarchy)\n"
+    "- interract with eachother (for example hierarchy)\n",
+    "\n",
+    "## Four Fundamental Concepts of Object-oriented Programming\n",
+    "\n",
+    "### Encapsulation\n",
+    "\n",
+    "### Inheritance\n",
+    "\n",
+    "Inheritance refers to \n",
+    "\n",
+    "### Abstraction\n",
+    "\n",
+    "Abstraction refers to the principle of only putting relevant information in a class. \n",
+    "\n",
+    "### Polymorphism\n",
+    "\n",
+    "\n"
    ]
   },
   {
