--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -189,17 +189,22 @@
     "- We can also use __special methods__ that will rewrite existing standard functions such as print()\n",
     "- interract with eachother (for example hierarchy)\n",
     "\n",
-    "## Four Fundamental Concepts of Object-oriented Programming\n",
+    "## Four Fundamental Principles of Object-oriented Programming\n",
     "\n",
     "### Encapsulation\n",
     "\n",
-    "### Inheritance\n",
+    "**Encapsulation** refers to the principle of keeping the state of each object private, inside a class. By limiting direct access to this state and only allowing the object's methods to modify state in the class, this prevents the cascade of changes made in one part of a program to other parts of a program. Encapsulation is especially important in large and complex projects worked on by teams of programmers.\n",
     "\n",
-    "Inheritance refers to \n",
+    "\n",
     "\n",
     "### Abstraction\n",
     "\n",
-    "Abstraction refers to the principle of only putting relevant information in a class. \n",
+    "**Abstraction** refers to the principle of only putting specifically relevant information in a class. Other information that is only partly relevant should be placed in a subclass (see **Inheritance**). \n",
+    "\n",
+    "### Inheritance\n",
+    "\n",
+    "**Inheritance** refers to how an Object-oriented programming language allows the creation of new (child) subclasses using the details of an existing (parent) class. Inheritance is closely associated with the concept of **Abstraction** as it allows programmers to \n",
+    "\n",
     "\n",
     "### Polymorphism\n",
     "\n",
