--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -193,18 +193,17 @@
     "\n",
     "### Encapsulation\n",
     "\n",
-    "**Encapsulation** refers to the principle of keeping the state of each object private, inside a class. By limiting direct access to this state and only allowing the object's methods to modify state in the class, this prevents the cascade of changes made in one part of a program to other parts of a program. Encapsulation is especially important in large and complex projects worked on by teams of programmers.\n",
+    "**Encapsulation** refers to the principle of keeping the state of each object private, inside a class. By limiting direct access to this state and only allowing the object's methods to modify state in the class, this prevents the unintentional spread of changes made in one part of a program to other parts of the program. Encapsulation is especially important in large and complex projects worked on by teams of programmers, where communication between different parts of the program must be carefully managed.\n",
     "\n",
     "\n",
     "\n",
     "### Abstraction\n",
     "\n",
-    "**Abstraction** refers to the principle of only putting specifically relevant information in a class. Other information that is only partly relevant should be placed in a subclass (see **Inheritance**). \n",
+    "**Abstraction** refers to the principle of only putting specifically relevant information in a class. Other information that is only partly relevant should be placed in a subclass (see **Inheritance**). This also benefits the maintanence of large codebases, as changes can be contained within each object.\n",
     "\n",
     "### Inheritance\n",
     "\n",
-    "**Inheritance** refers to how an Object-oriented programming language allows the creation of new (child) subclasses using the details of an existing (parent) class. Inheritance is closely associated with the concept of **Abstraction** as it allows programmers to \n",
-    "\n",
+    "**Inheritance** refers to how an Object-oriented programming language allows the creation of new (child) subclasses using the details of an existing (parent) class. Inheritance is closely associated with the concept of **Abstraction** as it allows programmers to reuse the attributes and methods of the parent class while adding only what is necessary and relevant for each child class.\n",
     "\n",
     "### Polymorphism\n",
     "\n",
