--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -195,7 +195,43 @@
     "\n",
     "**Encapsulation** refers to the principle of keeping the state of each object private, inside a class. By limiting direct access to this state and only allowing the object's methods to modify state in the class, this prevents the unintentional spread of changes made in one part of a program to other parts of the program. Encapsulation is especially important in large and complex projects worked on by teams of programmers, where communication between different parts of the program must be carefully managed.\n",
     "\n",
+    "```python\n",
     "\n",
+    "class Gorilla:\n",
+    "    def __init__(self, name, awakeness, colour):\n",
+    "        self.name = name\n",
+    "        self.awakeness = awakeness\n",
+    "        self.__colour = colour # Note the double underscore denoting a private\n",
+    "                               # attribute\n",
+    "        \n",
+    "    def currentstate(self):\n",
+    "        print(f\"{self.name} is currently {self.awakeness}.\")\n",
+    "        \n",
+    "    def currentcolour(self):\n",
+    "        print(f\"{self.name} is {self.__colour} in colour.\")\n",
+    "        \n",
+    "    def spraypaint(self, paint): # Public method that changes the private \n",
+    "        self.paint = paint       # attribute \"self.__colour\"\n",
+    "        self.__colour = paint\n",
+    "        \n",
+    "kingkong = Gorilla(\"King Kong\", \"asleep\", \"black\")\n",
+    "\n",
+    "kingkong.currentstate()\n",
+    "kingkong.awakeness = \"awake\" # \n",
+    "kingkong.currentstate()\n",
+    "print(\"\")\n",
+    "\n",
+    "kingkong.currentcolour()\n",
+    "kingkong.__colour = \"brown\" # Private attributes cannot be modified outside\n",
+    "kingkong.currentcolour()    # the class\n",
+    "print(\"\")\n",
+    "\n",
+    "kingkong.currentcolour()\n",
+    "kingkong.spraypaint(\"red\") # Private attributes can only be modified by\n",
+    "kingkong.currentcolour()   # public methods of the class\n",
+    "print(\"\")\n",
+    "\n",
+    "```\n",
     "\n",
     "### Abstraction\n",
     "\n",
