--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -201,8 +201,7 @@
     "    def __init__(self, name, awakeness, colour):\n",
     "        self.name = name\n",
     "        self.awakeness = awakeness\n",
-    "        self.__colour = colour # Note the double underscore denoting a private\n",
-    "                               # attribute\n",
+    "        self.__colour = colour # Note the double underscore denoting a private attribute\n",
     "        \n",
     "    def currentstate(self):\n",
     "        print(f\"{self.name} is currently {self.awakeness}.\")\n",
@@ -210,25 +209,25 @@
     "    def currentcolour(self):\n",
     "        print(f\"{self.name} is {self.__colour} in colour.\")\n",
     "        \n",
-    "    def spraypaint(self, paint): # Public method that changes the private \n",
-    "        self.paint = paint       # attribute \"self.__colour\"\n",
+    "    def spraypaint(self, paint): # Public method that changes the private attribute \"self.__colour\"\n",
+    "        self.paint = paint\n",
     "        self.__colour = paint\n",
     "        \n",
     "kingkong = Gorilla(\"King Kong\", \"asleep\", \"black\")\n",
     "\n",
     "kingkong.currentstate()\n",
-    "kingkong.awakeness = \"awake\" # \n",
+    "kingkong.awakeness = \"awake\" # Usually, attributes in a class can be directly modified outside the class\n",
     "kingkong.currentstate()\n",
     "print(\"\")\n",
     "\n",
     "kingkong.currentcolour()\n",
-    "kingkong.__colour = \"brown\" # Private attributes cannot be modified outside\n",
-    "kingkong.currentcolour()    # the class\n",
+    "kingkong.__colour = \"brown\" # However, private attributes cannot be modified outside the class\n",
+    "kingkong.currentcolour()\n",
     "print(\"\")\n",
     "\n",
     "kingkong.currentcolour()\n",
-    "kingkong.spraypaint(\"red\") # Private attributes can only be modified by\n",
-    "kingkong.currentcolour()   # public methods of the class\n",
+    "kingkong.spraypaint(\"red\") # Private attributes can only be modified by public setter methods of the class\n",
+    "kingkong.currentcolour()\n",
     "print(\"\")\n",
     "\n",
     "```\n",
