--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -240,9 +240,44 @@
     "\n",
     "**Inheritance** refers to how an Object-oriented programming language allows the creation of new (child) subclasses using the details of an existing (parent) class. Inheritance is closely associated with the concept of **Abstraction** as it allows programmers to reuse the attributes and methods of the parent class while adding only what is necessary and relevant for each child class.\n",
     "\n",
-    "### Polymorphism\n",
+    "### Polymorphism  \n",
     "\n",
-    "\n"
+    "Polymorphism is one of the 4 pillars of OOP, it allows our program to process information differently based on their data type, i.e. one class will react differently to another when processing certain data. This is achieved through the usage of a generic interface. Let's illustrate by an example. \n",
+    "\n",
+    "```python\n",
+    "#creation first class\n",
+    "class Dolphin:\n",
+    "    \n",
+    "    def sing(self): \n",
+    "        print(\"Dolphins can't sing, silly.\")\n",
+    "        \n",
+    "\n",
+    "#creation second class\n",
+    "class Gorilla:\n",
+    "\n",
+    "    def sing(self):\n",
+    "        print (\"*Sings Despacito*\")\n",
+    "\n",
+    "#creation of generic interface\n",
+    "def singing(animal):\n",
+    "    animal.sing()\n",
+    "    \n",
+    "#Now let's test what this does\n",
+    "#First, we create 2 animals, a dolphin and a gorilla \n",
+    "\n",
+    "dolphin1 = Dolphin()\n",
+    "gorilla1 = Gorilla()\n",
+    "\n",
+    "#pass our objects through the generic interface\n",
+    "singing(dolphin1)\n",
+    "singing(gorilla1)\n",
+    "```\n",
+    "This returns: \n",
+    "\n",
+    "Dolphins can't sing, silly.  \n",
+    "\\*Sings Despacito*\n",
+    "\n",
+    "We have defined two different classes, Dolphin() and Gorilla(), each with their own sing() method. We then defined a generic interface singing(), for the input of any object. Then, passing our two objects, dolphin1 and gorilla1 through this interface, we get differing output, depending on the class of our input. In the case of the Gorilla, it is able to sing. Because gorillas can sing. Duh. Well only Despacito. In the case of our Dolphin, it is sadly unable to sing. \n"
    ]
   },
   {
