Fix image Tutorial 3.

--- a/03_Values_Variables_Operators_Functions.ipynb
+++ b/03_Values_Variables_Operators_Functions.ipynb
@@ -1987,7 +1987,7 @@
     "\n",
     "With most modern cryptography, the ability to keep encrypted information secret is not necessarily dependent on the cyptographic algorithm as this is widely known, but on a number called a key that must be used with the algorithm to produce an encrypted result or to decrypt previously encrypted information. Decryption with the correct key is simple. Decryption without the correct key is very difficult and in some cases impossible.\n",
     "\n",
-    "![image.png](https://github.com/orlandosaxer/Programming-for-Quantitative-Analysis/blob/master/imgs/03_EncryptionDecryption.png?raw=true)\n",
+    "![Encryption Decryption](imgs/03_EncryptionDecryption.png)\n",
     "Source image: https://stackoverflow.com/questions/4948322/fundamental-difference-between-hashing-and-encryption-algorithms\n",
     "\n",
     "## Encryption\n",
